src/objects/Pardot_Visitor_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Activity Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compaign_Id__c</fullName>
        <label>Compaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compaign_Name__c</fullName>
        <label>Compaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Url_Id__c</fullName>
        <label>Custom Url Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <label>File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Handler_Id__c</fullName>
        <label>Form Handler Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Id__c</fullName>
        <label>Form Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Id__c</fullName>
        <label>Landing Page Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Pardot Visitor Activities</relationshipLabel>
        <relationshipName>Pardot_Visitor_Activities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardon_Activity_Link__c</fullName>
        <label>Pardon Activity Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pardot_Created_Date__c</fullName>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pardot_Visitor_Activities_Sum__c</fullName>
        <label>Pardot Visitor Activities Sum</label>
        <referenceTo>Pardot_Visitor_Activities_Sum__c</referenceTo>
        <relationshipLabel>Pardot Visitor Activities</relationshipLabel>
        <relationshipName>Pardot_Visitor_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prospect_Id__c</fullName>
        <label>Prospect Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Action__c</fullName>
        <label>Type Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Name__c</fullName>
        <label>Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <label>Visit Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor_Id__c</fullName>
        <label>Visitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pardot Visitor Activity</label>
    <nameField>
        <label>Pardot Visitor Activities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot Visitor Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>